# Py_SL_C0de

./: .readthedocs.yaml  Post_process.py  README.rst  Readme.md  SL_equation_elastic.ipynb  SL_equation_elastic_sphere_har.ipynb  SOLVEr.py  deploy.bat  environment.yml  par.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
Data/: AYS2_sed.csv
SL_C0de/: Constant.toml  Load.py  Main.ipynb  Main.py  Post_Process.ipynb  Post_process.py  SL_model.py  SeaLevel.py  grid.py  ice.py  love.py  ocean_function.py  par_Load.py  par_SL_model.py  par_ice.py  par_love.py  par_sed.py  par_spharm.py  plot.py  plot_model_RSL.ipynb  plot_model_comparison.ipynb  plot_model_output.ipynb  run_test.ipynb  run_test.py  sediment.py  spharm.py  topography.py
docs/: Grid_doc.rst  SOLVER_doc.rst  Scaling_effect.rst  conf.py  index.rst  numerical_imp.rst  requirements.txt  spharm_doc.rst
docs/GRID_doc/: GRID_class_doc.rst  SEDIMENT_TIME_GRID_doc.rst
docs/image/: workflow.ai
docs/source/: LOAD_doc.rst  SL_model_doc.rst  SOLVER_doc.rst  Scaling_effect.rst  SeaLevel_doc.rst  Theory.rst  conf.py  developer_guide.rst  index.rst  love_doc.rst  reference.bib  spharm_doc.rst  usage.rst
docs/source/GRID_doc/: GRID_class_doc.rst  ICE_TIME_GRID_doc.rst  LOAD_TIME_GRID_doc.rst  OCEAN_TIME_GRID_doc.rst  SEDIMENT_TIME_GRID_doc.rst  TIME_GRID_doc.rst  TOPOGRAPHIC_TIME_GRID_doc.rst
script/: Loading_ice_and_sediment.ipynb  Main.py  SL_C0de_run.ipynb  Test_Loading_ice_and_sediment.py  Tests.py  run_SL_C0de.ipynb
sealevelcode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
slcode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: Converting_to_spherical_harmonics.ipynb  Loading_ice_and_sediment.ipynb  Ocean_curve.py  Plot_output.py  Plot_subsidence.ipynb  Post_process.py  Solve_SL.py  Solving_sea_level_equation.ipynb  Topo_global_gif.py  Topo_local_gif.py  calculating_subs.ipynb  compare_122_26_model.py  ice_grid_64.nc  sed_grid_64.nc  topo_grid_64.nc
src/SL_C0de/: Constant.toml  Load.py  SOLVER.py  grid.py  love.py  spharm.py
src/slcode.egg-info/: PKG-INFO  SOURCES.txt
