[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slcode"
version = "1.0.0"
authors = [
  { name="HENRY-LARROZE Adrien", email="adrien.henry@univ-lr.fr" },
]
description = "SL_C0de is a python library based on the matlab code SL_code. This module is used to calculate GIA over the world but alse the sediment isostasy. It include function to calculate radial symetric auto gravitational earth visco-elastic response. This module also include the possibility to resolve the Sea level equation based on the publication of Mitrovica and Austermann ... ajouter des refs. The aim of this library is to be easy to include new sources of load and link to other python library."
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENCE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "joblib==1.2.0",
  "matplotlib==3.7.0",
  "numpy==1.24.2",
  "plotly==5.13.0",
  "pyshtools==4.10.1",
  "scipy==1.10.0",
  "sphinx_rtd_theme==1.2.0",
  "tomli==2.0.1",
  "stripy==2.2",
  "netcdf4==1.6.2",
  "jupyter==1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/AHenryLarroze/Py_SL_C0de"
"Bug Tracker" = "https://github.com/AHenryLarroze/Py_SL_C0de/issues"